Closed Bug 989407 Opened 11 years ago Closed 11 years ago

Clicking on things is very hard on latest hamachi m-c code

Categories

(Core :: Panning and Zooming, defect)

All
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: kats, Assigned: kats)

References

Details

Attachments

(2 files)

Attached file GDB backtrace
On latest m-c hamachi code, clicking on links in the browser (for example) is very hard. I was trying to click on the link in bug 988494 comment 0 and it highlights but doesn't click. Some investigation showed that in GestureEventListener.cpp we seem to be getting a move event while in the GESTURE_FIRST_SINGLE_TOUCH_UP state, and so we reset our state to GESTURE_NONE, and then the max touch handler does nothing and the click never gets confirmed. The move event is coming from the attached backtrace, it appears to be a AMOTION_EVENT_ACTION_HOVER_MOVE gonk event that gets converted to a mouse move event, and then APZC interprets it as a touch-move event.
I filed bug 989416 for the underlying issue which mwu said didn't make sense (on IRC). I will try to fix this bug by removing the code where we treat mouse events as touch events, because I don't know where that is being used and it doesn't make sense to do.
Attached patch PatchSplinter Review
This code was always of dubious use to begin with. According to mwu the b2g emulator should already be generating touch events so we should never need to convert mouse events to touch events. Taking out this function makes mouse events fall through to the default ProcessEvent function so the event coordinates are still untransformed, it just doesn't get treated as a touch input for gesture/panning purposes. If somebody complains about this we can put it back in but at least we'll know where it's being used.
Attachment #8398661 - Flags: review?(botond)
Attachment #8398661 - Flags: review?(botond) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
I think the bug is back. I am not able to see the touch events. As in I am stuck on the lock screen in gaia. And the mouse events are not working to unlock the screen.
Please file a new bug with specific steps to reproduce, including the device and code version you are using. Thanks!
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: