Bug 989407 - Stop treating mouse events as touch events because it interferes with gesture detection. r=botond